<resources>
    <string name="app_name">YZPlatform</string>

    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="storage_description_title">你能允许存储权限吗?</string>
    <string name="storage_description_why_we_need_the_permission">你好,地图缓存需要存储权限。你能允许吗?</string>
    <string name="location_description_title">你能允许定位权限吗?</string>
    <string name="location_description_why_we_need_the_permission">你好,定位功能需要获取位置权限。你能允许吗?</string>
    <string name="usercenter_register">注册</string>
    <string name="usercenter_user">个人</string>
    <string name="usercenter_login">登录</string>
    <string name="usercenter_enterprise">企业</string>
    <string name="usercenter_agreement">同意《服务协议》</string>
    <string name="usercenter_register_text">注册即视为</string>
    <string name="usercenter_yizhong">一众汽车服务</string>
    <string name="usercenter_shouji">请输入手机号</string>
    <string name="usercenter_yanzheng">请填写验证码</string>
    <string name="usercenter_hqyzm">获取验证码</string>
    <string name="usercenter_signcode_error">验证码发送失败</string>
    <string name="usercenter_phone_error">手机号码不正确</string>
    <string name="usercenter_signcode_empty">验证码为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
