<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.plt.yzplatform.activity.LoginActivity">
    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:id="@+id/personal_register_upper"-->
    <!--android:layout_height="@dimen/common45dp"-->
    <!--android:orientation="horizontal"-->
    <!--android:gravity="center_vertical">-->
    <!--<ImageView-->
    <!--android:id="@+id/back"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:src="@drawable/usercenter_back"-->
    <!--android:padding="@dimen/common15dp"/>-->

    <!--<TextView-->
    <!--android:id="@+id/register"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginEnd="@dimen/common16dp"-->
    <!--android:layout_marginRight="@dimen/common16dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/usercenter_register"-->
    <!--android:textColor="@color/black_22"-->
    <!--android:textSize="@dimen/text_size_16sp" />-->

    <!--</RelativeLayout>-->
    <include layout="@layout/header_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common1dp"
        android:background="@color/bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common185dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common67dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common14dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common21dp"
            android:text="@string/usercenter_yizhong"
            android:textColor="@color/black_55"
            android:textSize="@dimen/text_size_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common60dp"
            android:layout_marginLeft="@dimen/common38dp"
            android:layout_marginRight="@dimen/common38dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/usercenter_shouji"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/gray_d8"
            android:textSize="@dimen/text_size_15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/common38dp"
            android:layout_marginRight="@dimen/common38dp"
            android:background="@color/bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/common38dp"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/usercenter_yanzheng"
                android:inputType="number"
                android:textColorHint="@color/gray_d8"
                android:textSize="@dimen/text_size_15sp" />

            <View
                android:layout_width="@dimen/common1dp"
                android:layout_height="@dimen/common15dp"
                android:layout_gravity="center_vertical"
                android:background="@color/bg_color"

                />

            <Button
                android:id="@+id/login_getCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common38dp"
                android:layout_weight="1.2"
                android:background="@null"
                android:outlineProvider="none"
                android:text="@string/usercenter_hqyzm"
                android:textColor="@color/black_55"
                android:textSize="@dimen/text_size_15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/common38dp"
            android:layout_marginRight="@dimen/common38dp"
            android:background="@color/bg_color" />

    </LinearLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common38dp"
        android:layout_marginRight="@dimen/common38dp"
        android:layout_marginTop="@dimen/common62dp"
        android:background="@drawable/selector_login_button"
        android:gravity="center"
        android:paddingBottom="@dimen/common12dp"
        android:paddingTop="@dimen/common12dp"
        android:text="@string/usercenter_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp" />

</LinearLayout>
